[gd_scene load_steps=6 format=3 uid="uid://cqod1o7ku1gik"]

[ext_resource type="Script" uid="uid://qramkd65jyn0" path="res://files/scripts/ui/death_ui.gd" id="1_7ojci"]
[ext_resource type="Theme" uid="uid://n7dt8mjg02qd" path="res://files/assets/resources/colored_theme.tres" id="2_4ownd"]
[ext_resource type="StyleBox" uid="uid://rjj0ne76uoxq" path="res://files/assets/resources/panel.tres" id="2_kfted"]
[ext_resource type="StyleBox" uid="uid://bamri1iq3oyfh" path="res://files/assets/resources/panedarkened.tres" id="3_5dwdw"]
[ext_resource type="FontFile" uid="uid://csgb3uaucubi4" path="res://files/assets/fonts/VCR_OSD_MONO_1.001.ttf" id="3_6j4xj"]

[node name="DeathUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ojci")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_kfted")

[node name="Margins" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 70
theme_override_constants/margin_bottom = 90

[node name="VBox" type="VBoxContainer" parent="Panel/Margins"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="PanelLabels" type="PanelContainer" parent="Panel/Margins/VBox"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_5dwdw")

[node name="MarginsLabels" type="MarginContainer" parent="Panel/Margins/VBox/PanelLabels"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 170
theme_override_constants/margin_bottom = 30

[node name="Labels" type="VBoxContainer" parent="Panel/Margins/VBox/PanelLabels/MarginsLabels"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="AttemptsTxt" type="Label" parent="Panel/Margins/VBox/PanelLabels/MarginsLabels/Labels"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_6j4xj")
theme_override_font_sizes/font_size = 30
text = "Attempts: 1"

[node name="JumpsTxt" type="Label" parent="Panel/Margins/VBox/PanelLabels/MarginsLabels/Labels"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_6j4xj")
theme_override_font_sizes/font_size = 30
text = "Jumps: 1"

[node name="MarginsButtons" type="MarginContainer" parent="Panel/Margins/VBox"]
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="Panel/Margins/VBox/MarginsButtons"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="Restart" type="Panel" parent="Panel/Margins/VBox/MarginsButtons/Buttons"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Margins/VBox/MarginsButtons/Buttons/Restart"]
layout_mode = 0
offset_left = -22.0
offset_right = 188.0
offset_bottom = 70.0
theme = ExtResource("2_4ownd")
theme_override_font_sizes/font_size = 30
text = "Restart"

[node name="Home" type="Panel" parent="Panel/Margins/VBox/MarginsButtons/Buttons"]
layout_mode = 2

[node name="Button" type="Button" parent="Panel/Margins/VBox/MarginsButtons/Buttons/Home"]
layout_mode = 0
offset_right = 226.0
offset_bottom = 70.0
theme = ExtResource("2_4ownd")
theme_override_font_sizes/font_size = 30
text = "Home"

[node name="NewBest" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.50200003
anchor_top = 0.46500003
anchor_right = 0.50200003
anchor_bottom = 0.46500003
offset_left = -268.56006
offset_top = -161.80002
offset_right = 267.43994
offset_bottom = -117.80002
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_6j4xj")
theme_override_font_sizes/font_size = 50
text = "NEW BEST!"
horizontal_alignment = 1
